refactor: collect(Collectros.toList()) to toList()
Co-authored-by: sang5c <skah321@gmail.com>